Bug 1668410 - Fix inline notification background colors for dark mode. r=Paenglab

--- a/mail/themes/shared/openpgp/inlineNotification.css
+++ b/mail/themes/shared/openpgp/inlineNotification.css
@@ -7,6 +7,9 @@
   border-radius: 3px;
   padding: 6px 8px;
   margin: 10px 3px;
+}
+
+.inline-notification-container {
   color: inherit;
 }
 
